# gta5view

./: .drone.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AppEnv.cpp  AppEnv.h  CMakeLists.txt  CrewDatabase.cpp  CrewDatabase.h  DatabaseThread.cpp  DatabaseThread.h  ExportDialog.cpp  ExportDialog.h  ExportDialog.ui  ExportThread.cpp  ExportThread.h  GlobalString.cpp  GlobalString.h  IconLoader.cpp  IconLoader.h  ImageEditorDialog.cpp  ImageEditorDialog.h  ImageEditorDialog.ui  ImportDialog.cpp  ImportDialog.h  ImportDialog.ui  JsonEditorDialog.cpp  JsonEditorDialog.h  JsonEditorDialog.ui  LICENSE  LICENSE.LGPL  MapLocationDialog.cpp  MapLocationDialog.h  MapLocationDialog.ui  MapPreviewDialog.cpp  (+85 more)
.ci/: app.rc  ci.sh  debian_build.sh  debian_ci.sh  debian_docker.sh  debian_install.sh  donate.txt  gta5view.desktop  gta5view.nsi  osx_build.sh  osx_ci.sh  osx_install.sh  windows_build.sh  windows_ci.sh  windows_docker.sh  wininstall_build.sh  wininstall_docker.sh
.drone/: TelemetryClassAuthenticator.cpp.enc  drone.sh
.flatpak/: de.syping.gta5view.yaml  de.syping.gta5view.yml
.gitlab/: TelemetryClassAuthenticator.cpp.enc  gitlab.sh  wininstall_build.sh
.travis/: TelemetryClassAuthenticator.cpp.enc  debian32_travis.sh  debian64_travis.sh  debian_build.sh  debian_install.sh  debian_travis.sh  dropbox_uploader.enc  gta5view.nsi  linux_build.sh  linux_travis.sh  osx_build.sh  osx_install.sh  osx_travis.sh  source.sh  travis.sh  ubuntu64_travis.sh  ubuntu_travis.sh  windows_build.sh  windows_travis.sh  wininstall_build.sh  wininstall_travis.sh
anpro/: JSHighlighter.cpp  JSHighlighter.h  imagecropper.cpp  imagecropper_p.h
dnr/: DonationDialog.cpp  DonationDialog.h
lang/: README.txt  gta5sync_fr.qm  gta5sync_fr.ts  gta5sync_no.ts  gta5sync_ru.qm  gta5sync_ru.ts  qt_ru.ts
qjson4/: QJsonArray  QJsonArray.cpp  QJsonArray.h  QJsonDocument  QJsonDocument.cpp  QJsonDocument.h  QJsonObject  QJsonObject.cpp  QJsonObject.h  QJsonParseError  QJsonParseError.cpp  QJsonParseError.h  QJsonParser.cpp  QJsonParser.h  QJsonRoot  QJsonRoot.h  QJsonValue  QJsonValue.cpp  QJsonValue.h  QJsonValueRef  QJsonValueRef.cpp  QJsonValueRef.h
res/: add.svgz  app.qrc  app.rc  app_cmake.qrc  app_qmake.qrc  back.svgz  btc.svgz  de.syping.gta5view.desktop  de.syping.gta5view.metainfo.xml  de.syping.gta5view.xml  donate.qrc  donate.svgz  eth.str  eth.svgz  global.de.ini  global.en.ini  global.es.ini  global.es_MX.ini  global.fr.ini  global.it.ini  global.ja.ini  global.ko.ini  global.pl.ini  global.pt.ini  global.qrc  global.rcc  global.ru.ini  global.zh.ini  gta5sync.desktop  gta5sync.ts  gta5sync.xpm  gta5sync_de.qm  gta5sync_de.ts  gta5sync_en_US.qm  gta5sync_en_US.ts  gta5sync_es.ts  gta5sync_fr.qm  gta5sync_fr.ts  gta5sync_ko.qm  gta5sync_ko.ts  (+29 more)
res/qt4/: tr_qt.qrc
res/qt6/: qtbase_en_GB.qm
res/src/: AvatarAreaProject.xcf
src/: AboutDialog.cpp  AboutDialog.h  AppEnv.cpp  AppEnv.h  CrewDatabase.cpp  CrewDatabase.h  DatabaseThread.cpp  DatabaseThread.h  ExportDialog.cpp  ExportDialog.h  ExportThread.cpp  ExportThread.h  GlobalString.h  ImportDialog.cpp  ImportDialog.h  ImportDialog.ui  JsonEditorDialog.cpp  JsonEditorDialog.h  JsonEditorDialog.ui  MapLocationDialog.cpp  MapLocationDialog.ui  OptionsDialog.cpp  OptionsDialog.h  OptionsDialog.ui  PictureDialog.cpp  PictureDialog.h  PictureExport.cpp  PictureExport.h  PictureWidget.cpp  PictureWidget.h  PlayerListDialog.cpp  PlayerListDialog.h  ProfileDatabase.cpp  ProfileDatabase.h  ProfileInterface.cpp  ProfileInterface.h  ProfileInterface.ui  ProfileLoader.cpp  ProfileLoader.h  RagePhoto.cpp  (+32 more)
src/anpro/: imagecropper.h  imagecropper_e.h
src/tmext/: TelemetryClassAuthenticator.cpp
src/uimod/: JSHighlighter.cpp  UiModLabel.cpp  UiModLabel.h  UiModWidget.h
strs/: global.de.ini  global.en.ini  global.ja.ini
tmext/: TelemetryClassAuthenticator.cpp  TelemetryClassAuthenticator.cpp.enc  TelemetryClassAuthenticator.h
uimod/: JSHighlighter.cpp  JSHighlighter.h  UiModLabel.cpp  UiModLabel.h  UiModWidget.cpp  UiModWidget.h
